fix layout problems
fix layout problems
modal
max-width from375px to 1024px

--- a/portfolio/atelier koco./css/dashboard.css
+++ b/portfolio/atelier koco./css/dashboard.css
@@ -42,7 +42,7 @@ label, select {
 }
 
 /* for mobile phone */
-@media(max-width: 375px){
+@media(max-width: 1024px){
     .dealers-dashboard, .sound-tunnel {
         max-width: 90vw;
         flex-direction: column;
@@ -65,5 +65,8 @@ label, select {
     .sound-tunnel a.export {
         display: block;
         margin: 40px 0;
+    }
+    .sound-tunnel {
+        margin-bottom: 70px;
     }
 }
